修改檔案路徑

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,5 +14,5 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - .:/app
+      - .:/app/eadai
     entrypoint: /bin/bash -c "npm run dev"
